; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_proc-cmdline.c_proc_cmdline.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_proc-cmdline.c_proc_cmdline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"SYSTEMD_PROC_CMDLINE\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@SIZE_MAX = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"/proc/cmdline\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_cmdline(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  %6 = load i8**, i8*** %3, align 8
  %7 = call i32 @assert(i8** %6)
  %8 = call i8* @secure_getenv(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i8* %8, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %22

11:                                               ; preds = %1
  %12 = load i8*, i8** %4, align 8
  %13 = call i8* @strdup(i8* %12)
  store i8* %13, i8** %5, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %11
  %17 = load i32, i32* @ENOMEM, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %2, align 4
  br label %32

19:                                               ; preds = %11
  %20 = load i8*, i8** %5, align 8
  %21 = load i8**, i8*** %3, align 8
  store i8* %20, i8** %21, align 8
  store i32 0, i32* %2, align 4
  br label %32

22:                                               ; preds = %1
  %23 = call i64 (...) @detect_container()
  %24 = icmp sgt i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = load i32, i32* @SIZE_MAX, align 4
  %27 = load i8**, i8*** %3, align 8
  %28 = call i32 @get_process_cmdline(i32 1, i32 %26, i32 0, i8** %27)
  store i32 %28, i32* %2, align 4
  br label %32

29:                                               ; preds = %22
  %30 = load i8**, i8*** %3, align 8
  %31 = call i32 @read_one_line_file(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8** %30)
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %29, %25, %19, %16
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @assert(i8**) #1

declare dso_local i8* @secure_getenv(i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i64 @detect_container(...) #1

declare dso_local i32 @get_process_cmdline(i32, i32, i32, i8**) #1

declare dso_local i32 @read_one_line_file(i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
